did the league show, bet create and update as well as teams score and goals calculator

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $black;
+  position: sticky;
+  top: 0;
+  height: 6vh;
+  color: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -10,3 +14,6 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+ .nav-link {
+  color: white;
+ }
