--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,5 +6,8 @@ $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+$light-gray: #d8d8d8;
+$gray: #8a8a8a;
+$dark-gray: rgb(63, 63, 63);
+$black: rgb(27, 27, 27);
+$white: rgb(248, 248, 248);
