--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,45 @@
 // Specific CSS for your home-page
+.banner {
+  background-image: url('/assets/banner.jpg');
+  background-attachment: fixed;
+  min-height: 94vh;
+}
+
+.my-container {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.title-section {
+  color: $light-gray;
+  background-color: black;
+}
+
+.menu {
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: center;
+  padding-top: 12vh;
+  gap: 2vh;
+}
+
+.menu-link {
+  background-color: $black;
+  width: 100%;
+  text-align: center;
+  border-radius: 6px;
+  border: 1px solid $light-gray;
+  a {
+    text-decoration: none;
+    color: $light-gray;
+    width: 100%;
+  }
+  a:hover {
+    color: $white;
+  }
+  h2 {
+    margin: 0;
+  }
+}
