--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
+@import "./leagues/show";
+@import "./matchweeks/show";
+@import "./seasons/index";
+@import "./seasons/show";
