--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,6 +10,9 @@
       <div class="menu-link">
         <h2><a href="https://www.lequipe.fr/Football/ligue-1/page-classement-individuel/buteurs" target="blank">BUTEURS LIGUE 1</a></h2>
       </div>
+      <div class="menu-link">
+        <h2><a href="#" target="blank">MES AMIS</a></h2>
+      </div>
     </div>
   </div>
 </div>
