--- a/app/assets/stylesheets/pages/matchweeks/_show.scss
+++ b/app/assets/stylesheets/pages/matchweeks/_show.scss
@@ -21,7 +21,7 @@ a {
 
 .back-button {
   width: 60px;
-  background-color: $black;
+  background: $black-linear;
   border-radius: 6px;
   a {
     color: $white;
@@ -39,7 +39,7 @@ a {
 
 .next-button {
   width: 60px;
-  background-color: $black;
+  background: $black-linear;
   border-radius: 6px;
   a {
     color: $white;
@@ -56,7 +56,7 @@ a {
 }
 
 .matchweek-matches {
-  background-color: $black;
+  background: $black-linear;
   border-radius: 6px;
 }
 
@@ -103,7 +103,7 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  background: $black;
+  background: $transparent;
   color: $white;
   border-radius: 6px;
   border: 1px solid $dark-gray;
