--- a/app/assets/stylesheets/pages/seasons/_index.scss
+++ b/app/assets/stylesheets/pages/seasons/_index.scss
@@ -3,7 +3,7 @@
  }
 
  .season-card {
-   background-color: $black;
+   background: $black-linear;
    width: 33%;
    margin: 0 auto;
    text-align: center;
