--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,11 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: $black;
+  background: $black-linear;
   position: sticky;
   top: 0;
   height: 6vh;
-  color: white;
+  color: $white;
+  border-bottom: 1px solid $dark-gray;
 }
 
 .navbar-lewagon .navbar-collapse {
