--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,6 +8,8 @@ $orange: #E67E22;
 $green: #1EDD88;
 $light-gray: #d8d8d8;
 $gray: #8a8a8a;
-$dark-gray: rgb(63, 63, 63);
+$dark-gray: rgb(58, 58, 58);
 $black: rgb(27, 27, 27);
 $white: rgb(248, 248, 248);
+$black-linear: linear-gradient(172deg, rgba(52,52,52,1) 0%, rgba(22,22,22,1) 20%, rgba(15,15,15,1) 100%);
+$transparent: rgba(0, 0, 0, 0)
