--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,6 @@
 
 .title-section {
   color: $light-gray;
-  background-color: black;
 }
 
 .menu {
@@ -26,7 +25,7 @@
 }
 
 .menu-link {
-  background-color: $black;
+  background: $black-linear;
   width: 100%;
   text-align: center;
   border-radius: 6px;
