did the first part of the friends page, and updated the seeds to add more players

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,4 +4,5 @@
 @import "./matchweeks/show";
 @import "./seasons/index";
 @import "./seasons/show";
-@import "./bets/new"
+@import "./bets/new";
+@import "./invitations/index";
