--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,15 +4,14 @@
       <div class="menu-link">
         <h2><%= link_to "SAISONS", seasons_path %></h2>
       </div>
-      <div class="menu-link">
-        <h2><%= link_to "STATISTIQUES", user_path(1) %></h2>
-      </div>
-      <div class="menu-link">
-        <h2><a href="https://www.lequipe.fr/Football/ligue-1/page-classement-individuel/buteurs" target="blank">BUTEURS LIGUE 1</a></h2>
-      </div>
-      <div class="menu-link">
-        <h2><a href="#" target="blank">MES AMIS</a></h2>
-      </div>
+      <% unless current_user.nil? %>
+        <div class="menu-link">
+          <h2><%= link_to "STATISTIQUES", user_path(current_user) %></h2>
+        </div>
+        <div class="menu-link">
+          <h2><%= link_to "AMIS", user_invitations_path(current_user) %></h2>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
