--- a/app/views/invitations/_friend-card.html.erb
+++ b/app/views/invitations/_friend-card.html.erb
@@ -1,4 +1,6 @@
-<div class="friend-card">
-  <h3><%= user.username %></h3>
-  <p><%= user.total_score %> pts</p>
-</div>
+<%= link_to user_path(user) do %>
+  <div class="friend-card">
+    <h3><%= user.username %></h3>
+    <p><%= user.total_score %> pts</p>
+  </div>
+<% end %>
