--- a/app/assets/stylesheets/pages/leagues/_show.scss
+++ b/app/assets/stylesheets/pages/leagues/_show.scss
@@ -78,12 +78,12 @@
   justify-content: space-between;
   border-bottom: 1px solid $dark-gray;
   a {
-    width: 19%;
-    height: 40%;
-    border: 1px solid $dark-gray;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    border-radius: 6px;
+    // width: 19%;
+    // height: 40%;
+    // border: 1px solid $dark-gray;
+    // padding-top: 12px;
+    // padding-bottom: 12px;
+    // border-radius: 6px;
     text-decoration: none;
     color: $white;
   }
@@ -122,12 +122,17 @@
 }
 
 .nextmatch-card {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  width: 150px;
+  height: 120px;
+  margin: 12px;
+  border: 1px solid $dark-gray;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 6px;
 }
 
 .matchweeks {
