--- a/app/views/shared/_nextmatch-card.html.erb
+++ b/app/views/shared/_nextmatch-card.html.erb
@@ -1,19 +1,54 @@
-<%= link_to new_or_edit_match_bet_path(nextmatch) do %>
-  <div class="nextmatch-card">
-    <div class="nextmatch-card-top">
-        <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
-      <h4>-</h4>
-      <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
-    </div>
-    <div class="nextmatch-card-bottom">
-      <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
-      <div class="nextmatch-prono">
-        <% if Bet.where(match: nextmatch, user: current_user).exists? %>
-          <p>Prono: <%= Bet.where(match: nextmatch, user: current_user).last.prono %></p>
-        <% else %>
-          <p>Nouveau prono</p>
-        <% end %>
+
+<% if current_user.admin? %>
+  <%= link_to new_or_edit_match_bet_path(nextmatch) do %>
+    <div class="nextmatch-card">
+      <div class="nextmatch-card-top">
+          <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
+        <h4>-</h4>
+        <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
+      </div>
+      <div class="nextmatch-card-bottom">
+        <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
+        <div class="nextmatch-prono">
+          <% if Bet.where(match: nextmatch, user: current_user).exists? %>
+            <p>Prono: <%= Bet.where(match: nextmatch, user: current_user).last.prono %></p>
+          <% else %>
+            <p>Nouveau prono</p>
+          <% end %>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
+<% else %>
+  <% if Bet.where(match: nextmatch, user: current_user).exists? %>
+    <div class="nextmatch-card">
+      <div class="nextmatch-card-top">
+        <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
+        <h4>-</h4>
+        <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
+      </div>
+      <div class="nextmatch-card-bottom">
+        <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
+        <div class="nextmatch-prono">
+          <p>Prono: <%= Bet.where(match: nextmatch, user: current_user).last.prono %></p>
+        </div>
+      </div>
+    </div>
+  <% else %>
+    <%= link_to new_match_bet_path(nextmatch) do %>
+      <div class="nextmatch-card">
+        <div class="nextmatch-card-top">
+            <%= cl_image_tag Team.find(nextmatch.team_home_id).photo.key, height: 48, width: 36, crop: :fit %>
+          <h4>-</h4>
+          <%= cl_image_tag Team.find(nextmatch.team_away_id).photo.key, height: 48, width: 36, crop: :fit %>
+        </div>
+        <div class="nextmatch-card-bottom">
+          <p><%= nextmatch.date.strftime('%A').chars.first(3).join %> <%= nextmatch.date.day %>/<%= nextmatch.date.month %></p>
+          <div class="nextmatch-prono">
+            <p>Nouveau prono</p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
 <% end %>
