group created, private todo

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,4 +6,5 @@
 @import "./seasons/show";
 @import "./bets/new";
 @import "./invitations/index";
-@import "./users/show"
+@import "./users/show";
+@import "./rooms/rooms";
