work in progress

--- a/app/views/invitations/_friend-card.html.erb
+++ b/app/views/invitations/_friend-card.html.erb
@@ -1,6 +1,15 @@
-<%= link_to user_path(user) do %>
-  <div class="friend-card">
-    <h3><%= user.username %></h3>
-    <p><%= user.total_score %> pts</p>
-  </div>
+<% if user.friend_with?(current_user) %>
+  <%= link_to user_path(user) do %>
+    <div class="friend-card">
+      <h3><%= user.username %></h3>
+      <p><%= user.total_score %> pts</p>
+    </div>
+  <% end %>
+<% else %>
+  <%= link_to new_user_invitation_path(user) do %>
+    <div class="friend-card">
+      <h3><%= user.username %></h3>
+      <p><%= user.total_score %> pts</p>
+    </div>
+  <% end %>
 <% end %>
