--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
+$yellow: #ffd61f;
+$orange: #e9b657;
+$red: #ce9b3c;
 $green: #1EDD88;
 $light-gray: #d8d8d8;
 $gray: #8a8a8a;
