--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 .banner {
-  background-image: url('/assets/banner.jpg');
+  // background-color: $black;
   background-attachment: fixed;
   min-height: 94vh;
 }
