--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,12 +6,12 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 $dark-gray;
+$body-bg:                 $black;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $black;
-$primary:    $blue;
+$body-color: $yellow;
+$primary:    $yellow;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
