--- a/app/assets/stylesheets/pages/rooms/_rooms.scss
+++ b/app/assets/stylesheets/pages/rooms/_rooms.scss
@@ -1,22 +1,22 @@
 .chat-container {
-  margin: 24px;
+  margin: 60px;
+  margin-top: 12px;
+  margin-bottom: 0;
 }
 
 .msg-form {
   position: fixed;
   bottom: 0;
-  width: 75%
+  width: 78%
 }
 
 .col-md-10 {
-  height: 85vh;
-  width: 80%;
+  height: 89vh;
   overflow: scroll;
 }
 
 .msg-content {
-  width: 80%;
-  margin-right: 5px;
+  padding-left: 12px;
 }
 
 .message-box {
@@ -27,4 +27,46 @@
   margin-bottom: 10px;
   background-color: #555555 ;
   padding: 10px
+}
+
+.chat-left {
+  width: 25%;
+  h1 {
+    color: $yellow;
+  }
+}
+
+.chat-right {
+  width: 75%;
+  background: $black-linear;
+  border-radius: 6px;
+}
+
+.chat-users-perso {
+  a {
+    color: $white;
+  }
+}
+
+.chat-rooms-perso {
+  a {
+    color: $white;
+  }
+}
+
+.messagebar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.messagebar-container {
+  position: absolute;
+  bottom: 16px;
+  right: 65px;
+  width: 70%;
+}
+
+.chat-box-container {
+  justify-content: space-between;
 }
