--- a/app/assets/stylesheets/pages/users/_show.scss
+++ b/app/assets/stylesheets/pages/users/_show.scss
@@ -23,6 +23,7 @@
   margin-bottom: 24px;
   border-bottom: 1px solid $dark-gray;
   text-align: center;
+  color: $yellow;
 }
 
 .user-card-stats {
@@ -47,6 +48,7 @@
     text-align: end;
   }
 }
+
 
 .user-card-friendship {
   width: 100%;
