--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <style>
       <%= ".msg-#{current_user&.id}" %> {
-      background-color: #007bff !important;
+      background-color: #ffd61f !important;
+      color: black !important;
       padding: 10px;
       }
       <%= ".cont-#{current_user&.id}" %> {
