--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 
 // Define fonts for body and headers
-$body-font: 'Quantico', sans-serif;
-$headers-font: 'Kenia', cursive;
+$body-font: 'Black Ops One', cursive;
+$headers-font: 'Fugaz One', cursive;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
