--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,5 +13,65 @@
         </div>
       <% end %>
     </div>
+    <div class="home-bottom">
+      <div class="home-bottom-left">
+        <div class="home-classement">
+          <h2>CLASSEMENT</h2>
+          <div class="classement-header">
+            <div class="classement-column-1">
+              <p>#</p>
+            </div>
+            <div class="classement-column-2">
+              <p>Nom</p>
+            </div>
+            <div class="classement-column-3">
+              <p>Score</p>
+            </div>
+          </div>
+          <div class="classement-users">
+            <% @users.each_with_index do |user, index| %>
+              <div class="classement-row">
+                <div class="classement-column-1">
+                  <p><%= index + 1 %></p>
+                </div>
+                <div class="classement-column-2">
+                  <p><%= user.username %></p>
+                </div>
+                <div class="classement-column-3">
+                  <p><%= user.total_score %></p>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="home-bottom-right">
+        <h2>NOUVEAUX JOUEURS</h2>
+        <div class="new-users">
+          <div class="new-users-header">
+            <div class="new-user-row">
+              <div class="new-user-column-1">
+                <p>Nom</p>
+              </div>
+              <div class="new-user-column-2">
+                <p>Ajouté</p>
+              </div>
+            </div>
+          </div>
+          <div class="new-users-users">
+            <% @new_users.each do |user| %>
+              <div class="new-user-row">
+                <div class="new-user-column-1">
+                  <p><%= user.username.upcase %></p>
+                </div>
+                <div class="new-user-column-2">
+                  <p>le <%= user.created_at.day %>/<%= user.created_at.month %> à <%= user.created_at.hour %> h</p>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
