--- a/app/views/seasons/index.html.erb
+++ b/app/views/seasons/index.html.erb
@@ -3,7 +3,7 @@
     <% @seasons.each do |season| %>
       <div class="season-card">
         <%= link_to season_path(season) do %>
-          <h2>Saison <%= season.name %></h2>
+          <h2>SAISON <%= season.name %></h2>
         <% end %>
       </div>
     <% end %>
