--- a/app/assets/stylesheets/pages/leagues/_show.scss
+++ b/app/assets/stylesheets/pages/leagues/_show.scss
@@ -77,7 +77,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid $dark-gray;
+  overflow: auto;
   a {
     // width: 19%;
     // height: 40%;
