--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -4,7 +4,7 @@
     <% @leagues.each do |league| %>
       <div class="league-card">
         <%= link_to league_path(league) do %>
-          <h2><%= league.name %></h2>
+          <h2><%= league.name.upcase %></h2>
         <% end %>
       </div>
     <% end %>
