--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,15 +13,15 @@
         <% if user_signed_in? %>
           <li class="nav-item dropdown">
             <%= image_tag "menu.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Messages", users_path, class: "dropdown-item" %>
-              <%= link_to "Parier", seasons_path, class: "dropdown-item" %>
-              <%= link_to "Me déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+            <div class="dropdown-menu dropdown-menu-end dropdown-perso" aria-labelledby="navbarDropdown">
+              <%= link_to "Messages", users_path, class: "dropdown-item dropdown-item-perso" %>
+              <%= link_to "Parier", seasons_path, class: "dropdown-item dropdown-item-perso" %>
+              <%= link_to "Me déconnecter", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item dropdown-item-perso" %>
             </div>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Login", new_user_session_path, class: "nav-link login" %>
           </li>
         <% end %>
       </ul>
